MODON MRE BPDEV/force-app/main/default/objects/AgentMapping__c/AgentMapping__c.object-meta.xml
<CustomObject>
    <label>Agent Mapping</label>
    <nameField>
        <displayFormat>AG-{000000}</displayFormat>
        <label>Agent Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>