MODON MRE BPDEV/force-app/main/default/objects/AgentMapping__c/fields/AgencyMapping__c.field-meta.xml
<CustomField>
    <fullName>AgencyMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Mapping</label>
    <referenceTo>Agency_Mapping__c</referenceTo>
    <relationshipLabel>Agent Mappings</relationshipLabel>
    <relationshipName>Agent_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>