MODON MRE BPDEV/force-app/main/default/objects/AgentMapping__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agent Mappings</relationshipLabel>
    <relationshipName>Agent_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>